Fixed asset paths

--- a/_iconSubset.scss
+++ b/_iconSubset.scss
@@ -3,9 +3,9 @@
   font-family: 'entypo';
   font-style: normal;
   font-weight: normal;
-  src: url('/fonts/entypo.eot') format('eot'),
-  url('/fonts/entypo.ttf') format('truetype'),  
-  url('/fonts/entype.woff') format('woff');  
+  src: url('fonts/entypo.eot') format('eot'),
+  url('fonts/entypo.ttf') format('truetype'),  
+  url('fonts/entype.woff') format('woff');  
   //---Orginal source file paths from weloveiconfonts.com 
   /*
   src: url('http://weloveiconfonts.com/api/fonts/entypo/entypo.eot');
