--- a/_typography.scss
+++ b/_typography.scss
@@ -1,15 +1,15 @@
 @font-face {
     font-family: 'OpenSans';
-    src: url('/fonts/OpenSans-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('fonts/OpenSans-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
     font-family: 'OpenSans';
-    src: url('/fonts/OpenSans-Semibold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('fonts/OpenSans-Semibold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: 500;
 }
 @font-face {
     font-family: 'OpenSans';
-    src: url('/fonts/OpenSans-Bold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('fonts/OpenSans-Bold.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
     font-weight: bold;
 }
 
